
CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
PROJECT("kafka-notifier")
SET(CMAKE_MODULE_PATH
        "${PROJECT_SOURCE_DIR}/cmake"
        "${CMAKE_MODULE_PATH}"
)
OPTION(BUILD_TESTS "Build Unit Tests" OFF)
OPTION(BUILD_DEBUG "Build for debugging" OFF)

IF(BUILD_DEBUG) 
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g3")
ENDIF(BUILD_DEBUG)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/lib")
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(main)
IF(BUILD_TESTS) 
	SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -DBUILD_TESTS" )
	ADD_SUBDIRECTORY(test)
ENDIF(BUILD_TESTS)

